css file updated

--- a/week-2-html-asgn-1-pastoreekahk96/about.html
+++ b/week-2-html-asgn-1-pastoreekahk96/about.html
@@ -4,93 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Fassell</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <h1>History Of FC Fassell</h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="about.html">About</a>
-          </li>
-
-          <li>
-            <a href="contact.html">Contact</a>
-          </li>
-
-          <li>
-            <a href="index.html">Home</a>
-          </li>
-        </ul>
-      </nav>
-
-      <section>
-        <figure>
-          <img
-            src="./images_file/Fassell_Team.jpg"
-            alt="Fassel Team Photo"
-            width="400"
-            height="200"
-          />
-          <figcaption>Fassell Starting XI</figcaption>
-        </figure>
-        <figure>
-          <img
-            src="./images_file/Champiom_FC_Fassell.jpeg"
-            alt="Fassel Wins Championship"
-            width="400"
-            height="200"
-          />
-          <figcaption>Fassell Celebrates League1 Win</figcaption>
-        </figure>
-      </section>
+       <header class="header">
+            <h1 class="logo">FC Fassell</h1>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
     </header>
 
-    <main>
-      <section>
-        <h4>Brief History Of The</h4>
-        <p>
-          FC Fassell, also known as "The Soccer Missionaries," is a Liberian
-          football club based in Paynesville, outside Monrovia. The club was
-          founded with the mission of developing young football talent in
-          Liberia and giving opportunities to local players. Over the years, FC
-          Fassell became known as one of the most organized and ambitious clubs
-          in the country. The team gained promotion to the Liberian Premier
-          League and quickly built a reputation for discipline, teamwork, and a
-          commitment to grassroots football.
-        </p>
-      </section>
+    <main class="team-history-container">
+      <h1>History Of FC Fassell</h1>
+      <section class="team-history-content">
+        <div>
+          <h4>Brief History Of FC Fassell</h4>
+          <p>
+            FC Fassell, also known as "The Soccer Missionaries," is a Liberian
+            football club based in Paynesville, outside Monrovia. The club was
+            founded with the mission of developing young football talent in
+            Liberia and giving opportunities to local players. Over the years, FC
+            Fassell became known as one of the most organized and ambitious clubs
+            in the country. The team gained promotion to the Liberian Premier
+            League and quickly built a reputation for discipline, teamwork, and a
+            commitment to grassroots football.
+          </p>
+        </div>
 
-      <secttion>
-        <h4>Achievements & Notable players</h4>
-        <ul>
-          <li>Promoted to the Liberian Premier League in 2011.</li>
-          <li>
-            Quickly established itself as one of the most competitive teams in
-            Liberia.
-          </li>
-          <li>
-            Known for producing and supporting local talents who went on to
-            represent Liberia’s national team, the Lone Star.
-          </li>
-          <li>
-            Popular for their community engagement and youth development
-            projects.
-          </li>
-        </ul>
+        <div>
+          <h4>Achievements</h4>
+            <p>Promoted to the Liberian Premier League in 2011.</p>
+            <p>
+              Quickly established itself as one of the most competitive teams in
+              Liberia.
+            </p>
+            <p>
+              Known for producing and supporting local talents who went on to
+              represent Liberia’s national team, the Lone Star.
+            </p>
+            <p>
+              Popular for their community engagement and youth development
+              projects.
+            </p>
+        </div>
 
-        <h4>Notable Players</h4>
-        <ul>
-          <li>Solomon Wesseh (midfielder)</li>
-          <li>James Soto Roberts (forward)</li>
-          <li>
-            A host of young talents who later represented the national team.
-          </li>
-        </ul>
+        <div>
+          <h4>Notable Players</h4>
+            <p>Solomon Wesseh (midfielder)</p>
+            <p>James Soto Roberts (forward)</p>
+            <p>
+              A host of young talents who later represented the national team.
+            </p>
+        </div>  
       </secttion>
     </main>
-    <footer>
+
+    <footer class="footer">
       <p>&copy; 2024 FC Fassell. All rights reserved.</p>
     </footer>
+  
   </body>
 </html>
