--- a/week-2-html-asgn-1-pastoreekahk96/contact.html
+++ b/week-2-html-asgn-1-pastoreekahk96/contact.html
@@ -4,42 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main>
-      <form>
-        <div>
-          <label>First Name</label>
-          <input type="text" />
-        </div>
+ 
+<div class="container">
+        <h1>Contact Us</h1>
+        <form action="#" method="post" class="contact-form">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
 
-        <div>
-          <label>Last Name</label>
-          <input type="text" />
-        </div>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
 
-        <div>
-          <label>Email</label>
-          <input type="email" />
-        </div>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="6" required></textarea>
 
-        <div>
-          <label>Password</label>
-          <input type="password" />
-        </div>
-
-        <div>
-          <label>Number</label>
-          <input type="number" />
-        </div>
-
-        <div>
-          <label>Message</label>
-          <textarea></textarea>
-        </div>
-
-        <button>Summit</button>
-      </form>
-    </main>
+            <button type="submit">Send Message</button>
+        </form>
+    </div>   
   </body>
 </html>
