--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                       class="w-5 h-5"
                       alt="Emirates"
                     />
-                    Emirates
+                    Fc Fassell
                   </td>
                   <td class="py-2 px-4">4</td>
                   <td class="py-2 px-4">4</td>
@@ -602,7 +602,7 @@
                       class="w-5 h-5"
                       alt="Dibba Al-Hisn"
                     />
-                    Dibba Al-Hisn
+                    Bea Mountain
                   </td>
                   <td class="py-2 px-4">3</td>
                   <td class="py-2 px-4">3</td>
@@ -616,7 +616,7 @@
                       class="w-5 h-5"
                       alt="Al Hamriya"
                     />
-                    Al Hamriya
+                    Wologisi Fc
                   </td>
                   <td class="py-2 px-4">3</td>
                   <td class="py-2 px-4">2</td>
@@ -630,7 +630,7 @@
                       class="w-5 h-5"
                       alt="United FC"
                     />
-                    United FC
+                    Heaven Eleven Fc
                   </td>
                   <td class="py-2 px-4">3</td>
                   <td class="py-2 px-4">2</td>
