I WORKED ON THE NEWS SECTION OF THE HOME

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FC Fassel - Home</title>
     <link rel="stylesheet" href="./public/output.css">
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
 
@@ -53,6 +54,56 @@
                 </div>
         </section>
 
+        <section id="news">
+  <div class="container">
+    <h2>Latest News</h2>
+    <p>Stay updated with United FC’s latest matches, events, and announcements.</p>
+
+    <!-- ====== LATEST NEWS SECTION ====== -->
+<section id="news" class="w-screen bg-gray-900 py-16" >
+  <div class="max-w-6xl mx-auto px-4">
+    <!-- Section Title -->
+    <div class="text-left mb-10">
+      <h2 class="text-3xl md:text-4xl font-extrabold text-white underline">News</h2>
+    </div>
+
+    <!-- News Grid -->
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <!-- Card 1 -->
+      <article class="bg-white rounded-xl shadow hover:shadow-lg transition-all overflow-hidden">
+        <img src="im" alt="Match photo" class="w-full h-56 object-cover">
+        <div class="p-5">
+          <h3 class="text-xl font-bold text-[#001845] mb-1">Our first game in the CAF</h3>
+          <p class="text-sm text-gray-500 mb-3">October 20, 2025</p>
+          <p class="text-gray-700 mb-4">A thrilling experiene for the Lads the thier first CAF appearence.</p>
+          <a href="#" class="text-[#001845] font-semibold hover:text-yellow-400 transition">Read More →</a>
+        </div>
+      </article>
+
+      <!-- Card 2 -->
+      <article class="bg-white rounded-xl shadow hover:shadow-lg transition-all overflow-hidden">
+        <img src="im" alt="Training photo" class="w-full h-56 object-cover">
+        <div class="p-5">
+          <h3 class="text-xl font-bold text-[#001845] mb-1">Training Camp Highlights: Preparing for Next Round</h3>
+          <p class="text-sm text-gray-500 mb-3">October 17, 2025</p>
+          <p class="text-gray-700 mb-4">our Coaching  leads an intense week of tactical training ahead of next week’s match.</p>
+          <a href="#" class="text-[#001845] font-semibold hover:text-yellow-400 transition">Read More →</a>
+        </div>
+      </article>
+
+      <!-- Card 3 -->
+      <article class="bg-white rounded-xl shadow hover:shadow-lg transition-all overflow-hidden">
+        <img src="im" alt="Fans celebration" class="w-full h-56 object-cover">
+        <div class="p-5">
+          <h3 class="text-xl font-bold text-[#001845] mb-1">Baba2swift gets  recgonization from our president</h3>
+          <p class="text-sm text-gray-500 mb-3">October 15, 2025</p>
+          <p class="text-gray-700 mb-4">Our head of mobolization gets his recgonization.</p>
+          <a href="#" class="text-[#001845] font-semibold hover:text-yellow-400 transition">Read More →</a>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
           <section class="team-video">
         <iframe 
           width="800" 
