--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
       </section>
     </main>
 
-    <footer class="bg-gray-900 text-gray-300 font-sans anton">
+    <footer class="bg-[#001200] text-gray-300 font-sans anton">
       <!-- Partners Section -->
       <div class="text-gray-800 py-16 px-6 md:px-16">
         <h2 class="text-2xl md:text-3xl text-white text-center uppercase mb-4">
