media page initial commit

--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
       <nav class="hidden md:flex">
         <ul class="flex gap-5 tracking-wide text-base mx-4">
           <li>
-            <a href="#" class="hover:text-green-300 transition duration-300"
+            <a href="./pages/media.html" class="hover:text-green-300 transition duration-300"
               >Media</a
             >
           </li>
           <li>
             <a
-              href="about.html"
+              href="./pages/fixture"
               class="hover:text-green-300 transition duration-300 ease-in"
               >Fixture</a
             >
           </li>
           <li>
             <a
-              href="contact.html"
+              href="./pages/calender.html"
               class="hover:text-green-300 transition duration-300 ease-in"
               >Calendar</a
             >
