update media section with background image and news articles

--- a/pages/media.html
+++ b/pages/media.html
@@ -33,14 +33,14 @@
           </li>
           <li>
             <a
-              href="about.html"
+              href="./pages/fixture.html"
               class="hover:text-green-300 transition duration-300 ease-in"
               >Fixture</a
             >
           </li>
           <li>
             <a
-              href="contact.html"
+              href=".pages/calender.html"
               class="hover:text-green-300 transition duration-300 ease-in"
               >Calendar</a
             >
@@ -49,7 +49,7 @@
       </nav>
       <img
         class="w-16 h-16 rounded-full sm:justify-end"
-        src="./Wologisi_FC/images_file/20250927_204543.png"
+        src="../Wologisi_FC/images_file/20250927_204543.png"
         alt="team logo"
       />
       <div class="hidden md:flex mx-4 gap-2">
@@ -82,7 +82,211 @@
         </button>
       </div>
     </header>
-        ihgjhgh
+    <main class="main-container">
+      <!-- Hero section goes here -->
+      <section class="relative w-full h-[80vh]">
+        <!-- Background image -->
+        <div
+          class="absolute inset-0 bg-cover bg-center"
+          style="background-image: url('../Wologisi_FC/wologisi/FB_IMG_1758833678300.jpg')"
+          aria-hidden="true"
+        ></div>
+        <!-- Optional dark overlay -->
+        <div class="absolute inset-0 bg-black/80"></div>
+
+        <!-- Content -->
+        <div class="relative w-full h-full">
+          <div class="bg-black opacity-15 pl-30 w-full">
+            <h1 class="text-white text-[20rem]">MEDIA</h1>
+          </div>
+          <div class="relative top-[-260px] pl-34 ">
+          <h1 class="text-white text-[10rem]">MEDIA</h1>
+          </div>
+        </div>
+      </section>
+  <!-- ====== LATEST NEWS SECTION ====== -->
+      <section id="news" class="w-full bg-[#001600] py-16">
+        <div class="max-w-6xl mx-auto px-4">
+          <!-- Section Title -->
+          <div class="text-left mb-10">
+            <h2 class="text-3xl anton md:text-4xl text-white underline">
+              News
+            </h2>
+          </div>
+
+          <!-- News Grid -->
+          <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Card 1 -->
+            <article
+              class="bg-white rounded-xl hover:shadow-lg overflow-hidden"
+            >
+              <img
+                src="../Wologisi_FC/images_file/img1.jpeg"
+                alt="Match photo"
+                class="w-full h-56 object-cover"
+              />
+              <div class="p-5">
+                <h3
+                  class="text-xl font-bold text-[#001845] mb-1 anton tracking-wider"
+                >
+                  Our first game in the CAF
+                </h3>
+                <p class="text-sm text-gray-500 mb-3">October 20, 2025</p>
+                <p class="text-gray-700 mb-4 poppins">
+                  A thrilling experiene for the Lads the thier first CAF
+                  appearence.
+                </p>
+                <a
+                  href="#"
+                  class="text-[#001845] font-semibold hover:text-green-400 transition"
+                  >Read More →</a
+                >
+              </div>
+            </article>
+
+            <!-- Card 2 -->
+            <article
+              class="bg-white rounded-xl shadow hover:shadow-lg transition-all overflow-hidden"
+            >
+              <img
+                src="../Wologisi_FC/images_file/img3.jpg"
+                alt="Training photo"
+                class="w-full h-56 object-cover"
+              />
+              <div class="p-5">
+                <h3
+                  class="text-xl font-bold text-[#001845] mb-1 anton tracking-wider"
+                >
+                  Training Camp Highlights: Preparing for Next Round
+                </h3>
+                <p class="text-sm text-gray-500 mb-3">October 17, 2025</p>
+                <p class="text-gray-700 mb-4 poppins">
+                  our Coaching leads an intense week of tactical training ahead
+                  of next week&apos;s match.
+                </p>
+                <a
+                  href="#"
+                  class="text-[#001845] font-semibold hover:text-green-400 transition"
+                  >Read More →</a
+                >
+              </div>
+            </article>
+
+            <!-- Card 3 -->
+            <article
+              class="bg-white rounded-xl shadow hover:shadow-lg transition-all overflow-hidden"
+            >
+              <img
+                src="../Wologisi_FC/images_file/img2.jpeg"
+                alt="Fans celebration"
+                class="w-full h-56 object-cover"
+              />
+              <div class="p-5">
+                <h3
+                  class="text-xl font-bold text-[#001845] mb-1 anton tracking-wider"
+                >
+                  Baba2swift gets recgonization from our president
+                </h3>
+                <p class="text-sm text-gray-500 mb-3">October 15, 2025</p>
+                <p class="text-gray-700 mb-4 poppins">
+                  Our head of mobolization gets his recgonization.
+                </p>
+                <a
+                  href="#"
+                  class="text-[#001845] font-semibold hover:text-green-400 transition"
+                  >Read More →</a
+                >
+              </div>
+            </article>
+
+             <!-- Card 4 -->
+            <article
+              class="bg-white rounded-xl shadow hover:shadow-lg transition-all overflow-hidden"
+            >
+              <img
+                src="../Wologisi_FC/wologisi/FB_IMG_1758833761010.jpg"
+                alt="Fans celebration"
+                class="w-full h-56 object-cover"
+              />
+              <div class="p-5">
+                <h3
+                  class="text-xl font-bold text-[#001845] mb-1 anton tracking-wider"
+                >
+                  Baba2swift gets recgonization from our president
+                </h3>
+                <p class="text-sm text-gray-500 mb-3">October 15, 2025</p>
+                <p class="text-gray-700 mb-4 poppins">
+                  Our head of mobolization gets his recgonization.
+                </p>
+                <a
+                  href="#"
+                  class="text-[#001845] font-semibold hover:text-green-400 transition"
+                  >Read More →</a
+                >
+              </div>
+            </article>
+
+             <!-- Card 5 -->
+            <article
+              class="bg-white rounded-xl shadow hover:shadow-lg transition-all overflow-hidden"
+            >
+              <img
+                src="../Wologisi_FC/wologisi/FB_IMG_1758833899053.jpg"
+                alt="Fans celebration"
+                class="w-full h-56 object-cover"
+              />
+              <div class="p-5">
+                <h3
+                  class="text-xl font-bold text-[#001845] mb-1 anton tracking-wider"
+                >
+                  Baba2swift gets recgonization from our president
+                </h3>
+                <p class="text-sm text-gray-500 mb-3">October 15, 2025</p>
+                <p class="text-gray-700 mb-4 poppins">
+                  Our head of mobolization gets his recgonization.
+                </p>
+                <a
+                  href="#"
+                  class="text-[#001845] font-semibold hover:text-green-400 transition"
+                  >Read More →</a
+                >
+              </div>
+            </article>
+
+             <!-- Card 6 -->
+            <article
+              class="bg-white rounded-xl shadow hover:shadow-lg transition-all overflow-hidden"
+            >
+              <img
+                src="../Wologisi_FC/wologisi/FB_IMG_1758833684236.jpg"
+                alt="Fans celebration"
+                class="w-full h-56 object-cover"
+              />
+              <div class="p-5">
+                <h3
+                  class="text-xl font-bold text-[#001845] mb-1 anton tracking-wider"
+                >
+                  Baba2swift gets recgonization from our president
+                </h3>
+                <p class="text-sm text-gray-500 mb-3">October 15, 2025</p>
+                <p class="text-gray-700 mb-4 poppins">
+                  Our head of mobolization gets his recgonization.
+                </p>
+                <a
+                  href="#"
+                  class="text-[#001845] font-semibold hover:text-green-400 transition"
+                  >Read More →</a
+                >
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+     
+    </main>
+
+
   <footer class="bg-[#001200] text-gray-300 font-sans anton">
       <!-- Partners Section -->
       <div class="text-gray-800 py-16 px-6 md:px-16">
@@ -104,7 +308,7 @@
           >
             <div class="flex items-center gap-16 marquee-group">
               <img
-                src="./Wologisi_FC/partners/1xbet.png"
+                src="../Wologisi_FC/partners/1xbet.png"
                 alt="Partner 1"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
@@ -114,44 +318,44 @@
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
               <img
-                src="./Wologisi_FC/partners/img.jpg"
+                src="../Wologisi_FC/partners/img.jpg"
                 alt="Partner 3"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
               <img
-                src="./Wologisi_FC/partners/starbet.webp"
+                src="../Wologisi_FC/partners/starbet.webp"
                 alt="Partner 4"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
               <img
-                src="./Wologisi_FC/partners/images.png"
+                src="../Wologisi_FC/partners/images.png"
                 alt="Partner 4"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
             </div>
             <div class="flex items-center gap-16 marquee-group">
               <img
-                src="./Wologisi_FC/partners/1xbet.png"
+                src="../Wologisi_FC/partners/1xbet.png"
                 alt="Partner 1"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
               <img
-                src="./Wologisi_FC/partners/betto.png"
+                src="../Wologisi_FC/partners/betto.png"
                 alt="Partner 2"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
               <img
-                src="./Wologisi_FC/partners/img.jpg"
+                src="../Wologisi_FC/partners/img.jpg"
                 alt="Partner 3"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
               <img
-                src="./Wologisi_FC/partners/starbet.webp"
+                src="../Wologisi_FC/partners/starbet.webp"
                 alt="Partner 4"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
               <img
-                src="./Wologisi_FC/partners/images.png"
+                src="../Wologisi_FC/partners/images.png"
                 alt="Partner 4"
                 class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
               />
