Added the Calandar Section

--- a/pages/media.html
+++ b/pages/media.html
@@ -492,7 +492,7 @@
         <div>
           <h3 class="text-white mb-4 uppercase text-2xl">Club</h3>
           <ul class="space-y-2 poppins">
-            <li><a href="#" class="hover:text-green-400">Contact Us</a></li>
+            <li><a href="contact.html" class="hover:text-green-400">Contact Us</a></li>
             <li><a href="#" class="hover:text-green-400">Team</a></li>
             <li><a href="#" class="hover:text-green-400">First Team</a></li>
             <li><a href="#" class="hover:text-green-400">Second Team</a></li>
