Updated broken image link on the home page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <a href="index.html"
         ><img
           class="w-16 h-16 rounded-full sm:justify-end"
-          src="../Wologisi_FC/images_file/20250927_204543.png"
+          src="./Wologisi_FC/images_file/20250927_204543.png"
           alt="team logo"
         />
       </a>
